<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.dazzleduck.sql</groupId>
        <artifactId>dazzleduck-parent</artifactId>
        <version>0.0.15</version>
    </parent>

    <artifactId>dazzleduck-sql-client-grpc</artifactId>
    <name>DazzleDuck Project Client gRPC</name>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.17</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.dazzleduck.sql</groupId>
            <artifactId>dazzleduck-sql-client</artifactId>
            <version>0.0.15</version>
        </dependency>
        <dependency>
            <groupId>io.dazzleduck.sql</groupId>
            <artifactId>dazzleduck-sql-common</artifactId>
            <version>0.0.15</version>
        </dependency>
        <dependency>
            <groupId>org.apache.arrow</groupId>
            <artifactId>flight-core</artifactId>
            <version>${arrow.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.arrow</groupId>
            <artifactId>flight-sql</artifactId>
            <version>${arrow.version}</version>
        </dependency>
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <version>4.2.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.dazzleduck.sql</groupId>
            <artifactId>dazzleduck-sql-runtime</artifactId>
            <version>0.0.15</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.dazzleduck.sql</groupId>
            <artifactId>dazzleduck-sql-runtime</artifactId>
            <version>0.0.15</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.dazzleduck.sql</groupId>
            <artifactId>dazzleduck-sql-commons</artifactId>
            <version>0.0.15</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.dazzleduck.sql</groupId>
            <artifactId>dazzleduck-sql-flight</artifactId>
            <version>0.0.15</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>
